--- a/Admin/DataManager/View/Admin.Employee.Add.fxml
+++ b/Admin/DataManager/View/Admin.Employee.Add.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonType?>
+<?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.control.DialogPane?>
-<?import javafx.scene.control.ButtonType?>
+
 <DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="348.0" prefWidth="480.0" styleClass="dialog" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminEmployeeAddController">
    <header>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="308.0" prefWidth="480.0" stylesheets="@Css/AddApplication.css">
@@ -26,10 +24,10 @@
             <Label layoutX="45.0" layoutY="224.0" prefHeight="46.0" prefWidth="123.0" styleClass="LabelTilte" text="WorkType">
 
             </Label>
-            <TextField  layoutX="212.0" layoutY="48.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
-            <TextField  layoutX="212.0" layoutY="108.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
-            <TextField  layoutX="212.0" layoutY="171.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
-            <TextField  layoutX="212.0" layoutY="232.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
+            <TextField fx:id="textNameEmployee" layoutX="212.0" layoutY="48.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
+            <TextField fx:id="textPhone" layoutX="212.0" layoutY="108.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
+            <TextField fx:id="textPosition" layoutX="212.0" layoutY="171.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
+            <TextField fx:id="textType" layoutX="212.0" layoutY="232.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
          </children></AnchorPane>
    </header>
    <content>
