--- a/Admin/DataManager/View/Admin.Product.fxml
+++ b/Admin/DataManager/View/Admin.Product.fxml
@@ -13,14 +13,14 @@
 
 <AnchorPane prefHeight="599.0" prefWidth="1090.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminProductController">
    <children>
-      <TableView fx:id="table" layoutX="14.0" layoutY="106.0" prefHeight="400.0" prefWidth="1057.0" styleClass="table-view">
+      <TableView fx:id="productTableView" layoutX="14.0" layoutY="106.0" prefHeight="400.0" prefWidth="1057.0" styleClass="table-view">
          <columns>
-            <TableColumn prefWidth="62.0" text="ID" />
-            <TableColumn prefWidth="293.0" text="ProductName" />
-            <TableColumn prefWidth="264.0" text="Category" />
-            <TableColumn prefWidth="171.0" text="Size S" />
-            <TableColumn prefWidth="142.0" text="Size M" />
-            <TableColumn prefWidth="124.0" text="Size L" />
+            <TableColumn fx:id="productIDTableColumn" prefWidth="62.0" text="ID" />
+            <TableColumn fx:id="productNameTableColumn" prefWidth="293.0" text="ProductName" />
+            <TableColumn fx:id="CategoryNameTableColumn" prefWidth="264.0" text="Category" />
+            <TableColumn fx:id="productPriceBySTableColumn" prefWidth="171.0" text="Size S" />
+            <TableColumn fx:id="productPriceByMTableColumn" prefWidth="142.0" text="Size M" />
+            <TableColumn fx:id="productPriceByLTableColumn" prefWidth="124.0" text="Size L" />
          </columns>
       </TableView>
       <Label fx:id="header" alignment="CENTER" layoutX="-3.0" layoutY="1.0" prefHeight="34.0" prefWidth="1090.0" text="Manage" />
